# raytracepy

./: .coverage  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: camera.py  fig_to_grid.py  fitting_data.py  light_array.py  light_array_diffuser.py  light_array_mirror.py  load_saved_data.py  plot_format.py  plotting_tools.py  results_html.py  single_light.py  single_light_cosine.py  single_light_diffuser.py  single_light_inverse.py  single_light_inverse_data_workup.py  single_light_mirrors.py  testing.py  testing2.py
examples/array/: combination_analysis.py  light_array.py  light_array_combinations.py  light_array_diffuser.py  light_array_mirror.py  two.py
examples/cosine/: README.md  cosine.html  cosine_heatmap.html  cosine_heatmaps.py  cosine_plotting.py  cosine_sim.py  single_light_cosine.py
examples/grids/: merge.html  plot_grids.py
examples/inverse/: README.md  inverse_heatmap.html  inverse_heatmaps.py  inverse_plotting.py  inverse_sim.py  inverse_sim_processing.py  ln_dependence.html  rdf.html  rdf_inverse.csv  rdf_normalized.html
examples/mirror_efficiency/: mirror_data.csv  plotting.py  simulate_mirrors.py
examples/mirror_validation/: analysis.py  heatmap_raytrace.csv  heatmap_valid.csv  (+4 more)
htmlcov/: d_b1d6c3a590e1c868___init___py.html  d_b1d6c3a590e1c868_core_functions_py.html  d_b1d6c3a590e1c868_light_layouts_py.html  d_b1d6c3a590e1c868_light_py.html  d_b1d6c3a590e1c868_plane_py.html  d_b1d6c3a590e1c868_raytrace_simulator_py.html  d_b1d6c3a590e1c868_simulation_data_py.html  index.html  status.json
src/: main.py
(+189 files in other folders)
