[metadata]
name = raytracepy
version = 0.0.1
description = 3D raytracing package
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/raytrace
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    raytracepy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
include_package_data = true
install_requires =
    numpy>=1.19.0
    numba>=0.53.1
    plotly>=5.3.1
    scipy>=1.7.1
    pandas>=1.4.1
    datashader>=0.13.0
